# SMILE-X-ABSOLUTE-EDITION

./: settings.gradle
.github/workflows/: build_smilex.yml
SmileX-Absolute/: AndroidManifest.xml  README.md  build.gradle
SmileX-Absolute/app/: FloatingService.java  MainActivity.java  NativeBridge.java
SmileX-Absolute/jni/: Android.mk  Application.mk  CMakeLists.txt  core.cpp  offsets.h
SmileX-Absolute/res/layout/: floating_menu.xml
SmileX-Absolute/res/leyout/: floating_menu.xml
SmileX-Absolute/scripts/: main.lua  spidy_logger.lua
